--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <h1>JS</h1>
     
-    <script src="./funciones.js"></script>
+    <!-- <script src="./funciones.js"></script>
     <script src="./objetos.js"></script>
-    <script src="./DOM.js"></script>
+    <script src="./DOM.js"></script> 
+    <script src="./funcionesAnonimas.js"></script>
+    <script src="./arrowFunctions.js"></script>
+    
+    -->
+    <script src="stringLiterals.js"></script>
 </body>
 </html>
