--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <script src="./DOM.js"></script> 
     <script src="./funcionesAnonimas.js"></script>
     <script src="./arrowFunctions.js"></script>
+    <script src="stringLiterals.js"></script>
+    <script src="./arrayMethods.js"></script>
+    <script src="./spreadOperator.js"></script>
     
     -->
-    <script src="stringLiterals.js"></script>
+    <!-- al agregar este type="module" le decimos al navegador que vamos a usar las funciones import y export de JS -->
+    <script type="module" src="./ecmascriptModules.js"></script>
 </body>
 </html>
