Avance final: fetch con async y await

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <script src="./arrayMethods.js"></script>
     <script src="./spreadOperator.js"></script>
     
-    -->
-    <!-- al agregar este type="module" le decimos al navegador que vamos a usar las funciones import y export de JS -->
+    al agregar este type="module" le decimos al navegador que vamos a usar las funciones import y export de JS 
     <script type="module" src="./ecmascriptModules.js"></script>
+    -->
+    <script src="asyncAwait.js"></script>
 </body>
 </html>
